changed layout of memberships to table-based, as it a) is tabular data, and b) had layout bugs that meant the fields overlapped the header

--- a/app/assets/stylesheets/app-elements/tables.scss
+++ b/app/assets/stylesheets/app-elements/tables.scss
@@ -51,3 +51,10 @@ table {
 td dd {
   margin-top: -2.25rem;
 }
+
+.memberships {
+  tbody th{
+    vertical-align: top;
+    width: 40%;
+  }
+}
